[package]
name = "asv-to-usv"
version = "1.4.1"
edition = "2021"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
description = "ASV to USV: Convert ASCII Separated Values (ASV) to Unicode Separated Values (USV) such as for data markup, including for spreadsheets, databases, text files, and more."
readme = "README.md"
repository = "https://github.com/sixarm/asv-to-usv-rust-crate/"
license = "MIT OR Apache-2.0 OR GPL-2.0 OR GPL-3.0"
keywords = ["asv","usv",  "data", "import", "export"]
categories = ["command-line-utilities", "encoding", "data-structures", "database", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# usv: Unicode Separated Values
usv = "0.16.5"

# clap: Command Line Argument Parser
clap = { version = "4", features = ["cargo"] }

# log: A Rust library providing a lightweight logging facade
log = "0.4.21"

# env_logger: A logger that can be configured via environment variables
env_logger = "0.11.3"

[dev-dependencies]
criterion = ">= 0.5"
rand = ">= 0.8"
once_cell = "1.19.0"

[[bench]]
name = "example"
harness = false
